--- a/mappings/Navigator_Nutrition_Support_Screening_7.yaml
+++ b/mappings/Navigator_Nutrition_Support_Screening_7.yaml
@@ -69,36 +69,40 @@ api_targets:
     api_model: "QuestionnaireResponse"
     api_field_path: "linkID: NNSS_escalation_contact"
 
-  - paper_label: "Fluid Restriction"
+  - paper_label: "Remote Patient Monitoring (RPM)"
     questionnaire_code: "NNSS"
-    question_code: "NNSS_fluid_restriction"
+    question_code: "NNSS_remote_patient_monitoring"
     api_model: "QuestionnaireResponse"
-    api_field_path: "linkID: NNSS_fluid_restriction"
+    api_field_path: "linkID: NNSS_remote_patient_monitoring"
 
-  - paper_label: "Exact Fluid Restriction"
+  - paper_label: "if Pending, provide reason"
     questionnaire_code: "NNSS"
-    question_code: "NNSS_fluid_exact"
+    question_code: "NNSS_enrollment_pending_reason"
     api_model: "QuestionnaireResponse"
-    api_field_path: "linkID: NNSS_fluid_exact"
+    api_field_path: "linkID: NNSS_enrollment_pending_reason"
 
-  - paper_label: "Lifting Weight Restriction"
+  - paper_label: "RPM Modalities"
     questionnaire_code: "NNSS"
-    question_code: "NNSS_lifting_weight_restriction"
+    question_code: "NNSS_rpm_modalities"
     api_model: "QuestionnaireResponse"
-    api_field_path: "linkID: NNSS_lifting_weight_restriction"
+    api_field_path: "linkID: NNSS_rpm_modalities"
 
-  - paper_label: "Exact Weight Restriction"
+  - paper_label: "RPM Vendor / Platform"
     questionnaire_code: "NNSS"
-    question_code: "NNSS_exact_weight_restriction"
+    question_code: "NNSS_rpm_vendor"
     api_model: "QuestionnaireResponse"
-    api_field_path: "linkID: NNSS_exact_weight_restriction"
+    api_field_path: "linkID: NNSS_rpm_vendor"
 
-  - paper_label: "Plan for Receiving Meal Delivery"
+  - paper_label: "Assigned Navigator"
     questionnaire_code: "NNSS"
-    question_code: "NNSS_plan_for_delivery"
+    question_code: "NNSS_assigned_navigator"
     api_model: "QuestionnaireResponse"
-    api_field_path: "linkID: NNSS_plan_for_delivery"
+    api_field_path: "linkID: NNSS_assigned_navigator"
 
-
+  - paper_label: "Assigned RD"
+    questionnaire_code: "NNSS"
+    question_code: "NNSS_assigned_rd"
+    api_model: "QuestionnaireResponse"
+    api_field_path: "linkID: NNSS_assigned_rd"
     
     
